--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,18 +5,21 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
       - name: Check out repository code
         uses: actions/checkout@v4
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
+      - name: Get test program
         run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+          cd ${{ github.workspace }}/src
+          wget https://github.com/Extraskilled56/Echo-kernel/raw/main/build-test/build-test
+          chmod +x build-test
+      - name: Get enviroment ready
+        run: |
+          cd ${{ github.workspace }}/src
+          sudo apt full-upgrade -y
+          sudo apt install gcc nasm -y
       - name: build
         run: |
-          cd ${{ github.workspace }}
-          sudo apt install gcc nasm
+          cd ${{ github.workspace }}/src
+          ./build-test
+
+          
