--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
       "args": [],
       "stopAtEntry": false,
       "externalConsole": false,
-      "cwd": "/home/zacharyj/mkernel",
-      "program": "/home/zacharyj/mkernel/build/Debug/outDebug",
+      "cwd": "/home/zacharyj/Echo-kernel/src",
+      "program": "/home/zacharyj/Echo-kernel/src/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
