--- a/.github/workflows/code-test.yml
+++ b/.github/workflows/code-test.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Build ISO
         run: |
           cd ${{ github.workspace }}/src
-          bash scripts/build-iso.sh
+          bash scripts/build-iso-actions.sh
       - name: Upload ISO
         run: |
          cd ~/
