--- a/.github/workflows/code-test.yml
+++ b/.github/workflows/code-test.yml
@@ -26,11 +26,12 @@ jobs:
           bash scripts/build-iso-actions.sh
       - name: Upload ISO
         run: |
-         cd ~/
+         cd ${{ github.workspace }}/src
          git clone --depth 1 -b iso https://github.com/Extraskilled56/Echo-kernel.git
          cd Echo-kernel
          git config user.name "Echo bot"
          git config user.email "echo@echo.com"
+         mv *.iso Echo-kernel-$ECHO_VERSION.iso
          git add *.iso
          git commit -m "Add iso"
          git push --force
