--- a/.github/workflows/code-test.yml
+++ b/.github/workflows/code-test.yml
@@ -28,10 +28,10 @@ jobs:
         run: |
          cd ${{ github.workspace }}/src
          git clone --depth 1 -b iso https://github.com/Extraskilled56/Echo-kernel.git
-         cd Echo-kernel
          git config user.name "Echo bot"
          git config user.email "echo@echo.com"
-         mv *.iso Echo-kernel-$ECHO_VERSION.iso
+         mv *.iso Echo-kernel/Echo-kernel-$ECHO_VERSION.iso
+         cd Echo-kernel
          git add *.iso
          git commit -m "Add iso"
          git push --force
