--- a/.github/workflows/code-test.yml
+++ b/.github/workflows/code-test.yml
@@ -32,7 +32,9 @@ jobs:
          git clone --depth 1 -b iso https://github.com/Extraskilled56/Echo-kernel.git
          mv *.iso Echo-kernel/Echo-kernel-$ECHO_VERSION.iso
          cd Echo-kernel
+         git remote add orgmain --master iso https://bit-bot56:${{ secrets.GH_PASSWORD }}@github.com/Extraskilled56/Echo-kernel.git
+         git checkout -b iso
          git add *.iso
          git commit -m "Add iso"
-         git push --force
-          
+         git push orgmain --force
+         
