--- a/.github/workflows/code-test.yml
+++ b/.github/workflows/code-test.yml
@@ -29,7 +29,7 @@ jobs:
         uses: LasyIsLazy/github-upload-action@v0.1.0
         with:
           access-token: ${{ secrets.ACCESS }}
-          file-path: ${{ github.workspace }}/src/*.iso
+          file-path: ${{ github.workspace }}/src/Echo-kernel-0.0.2.iso
           owner: Extraskilled56
           repo: Echo-kernel
           branch-name: iso
