--- a/.config
+++ b/.config
@@ -2,12 +2,14 @@
 #
 # Kernel Information
 #
-CONFIG_VERSION="1.0.0"
+CONFIG_VERSION="1.5.0"
 CONFIG_SUBVERSION="r1"
 # end of Kernel Information
 
 #
 # Building Options
 #
-# CONFIG_BUILD_ISO is not set
+CONFIG_BUILD_ISO=n
 # end of Building Options
+
+# CONFIG_DEBUG is not set
